--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>3色セルフチェックアプリ - 素敵な日々の記録</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header class="header">
+    <h1>3色セルフチェックアプリ</h1>
+    <p>シンプルな３色評価で、あなたの一日をカラフルに記録</p>
+  </header>
+
+  <main class="container">
+    <!-- アプリの概要 -->
+    <section id="overview" class="section">
+      <h2>アプリ概要</h2>
+      <p>
+        このアプリは、毎日の自己評価を３色のシンプルな評価システムで記録するツールです。数値や複雑な設定は一切不要。直感的に色で今日の自分の出来栄えを振り返ることができます。ビジュアルなフィードバックが、あなたのモチベーションをさらに引き出します。
+      </p>
+    </section>
+
+    <!-- 問い合わせ -->
+    <section id="contact" class="section">
+      <h2>お問い合わせ</h2>
+      <p>ご意見・ご質問などございましたら、下記のボタンよりお問い合わせください。</p>
+      <a href="https://example.com/contact" class="contact-button">お問い合わせへ</a>
+    </section>
+
+    <!-- プライバシーポリシー -->
+    <section id="privacy" class="section">
+      <h2>プライバシーポリシー</h2>
+      <p>
+        当アプリでは、ユーザーからいかなる情報も取得いたしません。全ての記録はご自身の端末内で完結し、プライバシーは徹底的に保護されます。安心してご利用ください。
+      </p>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <p>&copy; 2025 3色セルフチェックアプリ. All Rights Reserved.</p>
+  </footer>
+</body>
+</html>
 
