--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section id="contact" class="section">
       <h2>お問い合わせ</h2>
       <p>ご意見・ご質問などございましたら、下記のボタンよりお問い合わせください。</p>
-      <a href="https://example.com/contact" class="contact-button">お問い合わせへ</a>
+      <a href="https://docs.google.com/forms/d/1W-IEIuoDkWq7jUKqkGnOrJVaD3VWGFJQN11ecqHxOIg/edit">お問い合わせへ</a>
     </section>
 
     <!-- プライバシーポリシー -->
