--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>3色セルフチェックアプリ - 素敵な日々の記録</title>
+  <title>dott - 3色セルフチェックアプリ</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="header">
-    <h1>3色セルフチェックアプリ</h1>
+    <h1>dott</h1>
     <p>シンプルな３色評価で、あなたの一日をカラフルに記録</p>
   </header>
 
