--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>dott - 3色セルフチェックアプリ</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>3色セルフチェックアプリ - 素敵な日々の記録</title>
+  <!-- CSSファイル名を"style.css"に修正 -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
-    <h1>dott</h1>
+    <h1>3色セルフチェックアプリ</h1>
     <p>シンプルな３色評価で、あなたの一日をカラフルに記録</p>
   </header>
 
@@ -25,7 +26,7 @@
     <section id="contact" class="section">
       <h2>お問い合わせ</h2>
       <p>ご意見・ご質問などございましたら、下記のボタンよりお問い合わせください。</p>
-      <a href="https://docs.google.com/forms/d/1W-IEIuoDkWq7jUKqkGnOrJVaD3VWGFJQN11ecqHxOIg/edit">お問い合わせへ</a>
+      <a href="https://example.com/contact" class="contact-button">お問い合わせへ</a>
     </section>
 
     <!-- プライバシーポリシー -->
@@ -42,4 +43,3 @@
   </footer>
 </body>
 </html>
-
